[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/SpeedUpx1.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/TextBox.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Pause.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/RunButtonDisablw.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/StopButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/RunButton.png" type="Texture" id=6]
[ext_resource path="res://Script/UI.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/pixelmix.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="RunButton" type="TextureButton" parent="."]
margin_left = 1627.0
margin_top = 670.0
margin_right = 1747.0
margin_bottom = 790.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="SpeedUpButton" type="Button" parent="."]
margin_left = 1750.0
margin_top = 670.0
margin_right = 1870.0
margin_bottom = 790.0
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="SpeedUpButton"]
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 1 )
expand = true

[node name="PauseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1738.0
margin_top = 16.0
margin_right = 1863.0
margin_bottom = 141.0
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="PauseButton"]
margin_right = 125.0
margin_bottom = 125.0
texture = ExtResource( 3 )
expand = true

[node name="StopButton" type="Button" parent="."]
margin_left = 1499.0
margin_top = 671.0
margin_right = 1619.0
margin_bottom = 791.0
flat = true

[node name="TextureRect" type="TextureRect" parent="StopButton"]
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 3.024
anchor_top = 21.558
anchor_right = 44.965
anchor_bottom = 25.383
margin_left = -110.96
margin_top = -158.32
margin_right = 94.3999
margin_bottom = 51.6799
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TextEdit" type="TextEdit" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 95.0
margin_top = 160.0
margin_right = -78.0
margin_bottom = -47.0
rect_min_size = Vector2( 600, 120 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="ExpandButton" type="Button" parent="TextureRect"]
margin_left = 886.0
margin_top = 28.0
margin_right = 992.0
margin_bottom = 101.0
flat = true
expand_icon = true
